--- a/apps/real-world-app/src/app/app.component.html
+++ b/apps/real-world-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center">
-  <h1>Welcome to ngrx-file-upload!</h1>
+  <h1>Welcome to real-world-app!</h1>
   <img
     width="450"
     src="https://raw.githubusercontent.com/nrwl/nx/master/nx-logo.png"
