add form to app component

--- a/apps/real-world-app/src/app/app.component.html
+++ b/apps/real-world-app/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div style="text-align:center">
-  <h1>Welcome to real-world-app!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/nx-logo.png"
-  />
-</div>
-<div>Message: {{ hello$ | async | json }}</div>
+<real-world-app-file-upload></real-world-app-file-upload>
