--- a/apps/real-world-app/src/app/app.component.html
+++ b/apps/real-world-app/src/app/app.component.html
@@ -1,1 +1,3 @@
-<real-world-app-file-upload></real-world-app-file-upload>
+<div class="container-fluid">
+  <real-world-app-file-upload></real-world-app-file-upload>
+</div>
