--- a/libs/file-upload/src/lib/file-upload-form/file-upload-form.component.css
+++ b/libs/file-upload/src/lib/file-upload-form/file-upload-form.component.css
@@ -1,8 +1,10 @@
-.upload-files {
+.upload-files,
+.clear-files {
   margin-left: 10px;
 }
 
 .upload-files > label,
-.browse-files > label {
+.browse-files > label,
+.clear-files > label {
   margin-bottom: 0;
 }
