--- a/libs/file-upload/src/lib/file-upload-status/file-upload-status.component.html
+++ b/libs/file-upload/src/lib/file-upload-status/file-upload-status.component.html
@@ -6,4 +6,5 @@
     [title]="errorMessage"
     [class]="colorClass"
   ></fa-icon>
+  <span *ngIf="file.progress && file.progress !== 0">{{ file.progress }}%</span>
 </div>
