--- a/libs/file-upload/src/lib/file-upload/file-upload.component.html
+++ b/libs/file-upload/src/lib/file-upload/file-upload.component.html
@@ -2,6 +2,7 @@
   <real-world-app-file-upload-form
     (fileAdded)="enqueueFile($event)"
     (upload)="uploadFiles()"
+    (clear)="clearFiles()"
   ></real-world-app-file-upload-form>
   <real-world-app-file-upload-list
     [files]="uploadQueue$ | async"
